# wasm-math

./: .gitignore  Cargo.toml  README.md
src/: calculus.rs  lib.rs  optimizers.rs  parsers.rs  statistics.rs
