[package]
name = "wasm-math"
version = "0.1.0"
authors = ["federicoaguzzi <federico.aguzzi@federicoaguzzi.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.80"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
rand = "0.7.3"